--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -22,13 +22,11 @@
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers">
-        <code class="prism language-bash" data-prism>
-_APP_SMTP_HOST=smtp.sendgrid.net
+        <code class="prism language-bash" data-prism>_APP_SMTP_HOST=smtp.sendgrid.net
 _APP_SMTP_PORT=587
 _APP_SMTP_SECURE=tls
 _APP_SMTP_USERNAME=YOUR-SMTP-USERNAME
-_APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD
-        </code>
+_APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code>
     </pre>
 </div>
 
