--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -21,13 +21,11 @@
 <p>Here's a sample configuration if you're using SendGrid as your SMTP provider. </p> 
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers">
-        <code class="prism language-bash" data-prism>_APP_SMTP_HOST=smtp.sendgrid.net
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>_APP_SMTP_HOST=smtp.sendgrid.net
 _APP_SMTP_PORT=587
 _APP_SMTP_SECURE=tls
 _APP_SMTP_USERNAME=YOUR-SMTP-USERNAME
-_APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code>
-    </pre>
+_APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code></pre>
 </div>
 
 <h2>Restart Your Appwrite Server</h2>
