--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -259,7 +259,7 @@ void main() { // Init SDK
             <td>
                 APPWRITE_FUNCTION_RUNTIME_NAME
             </td>
-            <td>Your function runtime name. Can be any of Appwrite supported execution environments.</td>
+            <td>Your function runtime name. Can be any of Appwrite supported execution runtimes.</td>
         </tr>
         <tr>
             <td>
