Hide YAML response because of stdClass look

--- a/app/views/docs/models.phtml
+++ b/app/views/docs/models.phtml
@@ -84,8 +84,8 @@ $example = function ($model, $models) use (&$example)
     <pre class="line-numbers"><code class="prism language-json" data-prism><?php echo json_encode($example($model, $models), JSON_PRETTY_PRINT); ?></code></pre>
 </div>
 
-<p><b>YAML</b></p>
+<!-- <p><b>YAML</b></p>
 
 <div class="ide" data-lang="yaml" data-lang-label="YAML">
     <pre class="line-numbers"><code class="prism language-yaml" data-prism><?php echo yaml_emit($example($model, $models)); ?></code></pre>
-</div>
+</div> -->
