--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -41,9 +41,24 @@
     </li>
     <li>
         <h3>Dart</h3>
+        <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>dart pub add dart_appwrite</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
         <div>
-            <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart SDK">
-                <pre class="line-numbers"><code class="prism language-dart" data-prism>dart pub add dart_appwrite</code></pre>
+            <p>Add maven repositories to your `build.gradle(.kts)` file</p>
+            <div class="ide margin-top-small" data-lang="gradle" data-lang-label="Gradle">
+                <pre class="line-numbers"><code class="prism language-gradle" data-prism>repositories {
+    mavenCentral()
+}</code></pre>
+            </div>
+            <p>Add Appwrite SDK under dependencies in your `build.gradle(.kts)` file</p>
+            <div class="ide margin-top-small" data-lang="gradle" data-lang-label="Gradle">
+                <pre class="line-numbers"><code class="prism language-gradle" data-prism>dependencies {
+    implementation("io.appwrite:sdk-for-kotlin:0.0.0-SNAPSHOT")
+}</code></pre>
             </div>
         </div>
     </li>
@@ -145,6 +160,18 @@ client
 ;</code></pre>
         </div>
     </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
+
+val client = Client()
+client
+    .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
+    .setProject('5df5acd0d48c2') // Your project ID
+    .setKey('919c2d18fb5d4...a2ae413da83346ad2') // Your secret API key</code></pre>
+        </div>
+    </li>
 </ul>
 
 <div class="notice">
@@ -181,6 +208,15 @@ client
 
 Response user = await account
     .createJWT();</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Android SDK</h3>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val account = Account(client)
+
+val response = account
+    .createJWT()</code></pre>
         </div>
     </li>
 </ul>
@@ -270,6 +306,18 @@ client
 ;</code></pre>
         </div>
     </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin SDK">
+            <pre class="line-numbers"><code class="prism language-Kotlin" data-prism>import io.appwrite.Client
+
+val client = Client()
+client
+    .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
+    .setProject("5df5acd0d48c2") // Your project ID
+    .setJWT("919c2d18fb5d4...a2ae413da83346ad2") // Your secret API key</code></pre>
+        </div>
+    </li>
 </ul>
 
 <h2>Make Your First Request</h2>
@@ -344,6 +392,17 @@ res.then((response) {
 }).catchError((error) {
     print(error);
 });</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.services.Users
+
+val users = Users(client);
+
+val res = users.create(email = 'email@example.com', password = 'password');
+println(res.body?.string())</code></pre>
         </div>
     </li>
 </ul>
@@ -477,6 +536,25 @@ res.then((response) {
 }).catchError((error) {
     print(error);
 });</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Kotlin SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
+import io.appwrite.services.Users
+
+val client = Client();
+val users = Users(client);
+
+client
+    .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
+    .setProject('5df5acd0d48c2') // Your project ID
+    .setKey('919c2d18fb5d4...a2ae413da83346ad2') // Your secret API key
+
+val res = users.create('email@example.com', 'password');
+
+println(res.body?.string())</code></pre>
         </div>
     </li>
 </ul>
