--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -1,6 +1,6 @@
 <p>Appwrite is a self-hosted backend server packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can use Appwrite on your local desktop or cloud provider of your choice.</p>
 
-<h2>System Requirements</h2>
+<h2><a href="#systemRequirements" id="systemRequirements">System Requirements</a></h2>
 
 <p>Appwrite was designed to run well on both small and large deployment. The minimum requirements to run Appwrite is as little as <b>1 CPU core</b> and <b>2GB of RAM</b>, and an operating system that supports Docker.</p>
 
@@ -9,7 +9,7 @@
     <p>If you are migrating from an older version of Appwrite, you need to follow the <a href="/docs/upgrade">migration instructions</a></p>
 </div>
 
-<h2>Install with Docker</h2>
+<h2><a href="#installWithDocker" id="installWithDocker">Install with Docker</a></h2>
 
 <p>The easiest way to start running your Appwrite server is by running our Docker installer tool from your terminal. Before running the installation command, make sure you have <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a> installed on your host machine.</p>
 
@@ -65,7 +65,7 @@
 
 <p>Once the Docker installation completes, go to your machine hostname or IP address on your browser to access the Appwrite console. Please notice that on non-linux native hosts the server might take a few minutes to start after installation completes.</p>
 
-<h2>Learn More</h2>
+<h2><a href="#learnMore" id="learnMore">Learn More</a></h2>
 
 <ul>
     <li class="margin-bottom-tiny"><a href="/docs/production" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Running Appwrite in production</a></li>
