--- a/app/views/docs/sdks.phtml
+++ b/app/views/docs/sdks.phtml
@@ -77,10 +77,10 @@ $markdown->setSafeMode(true);
 
 <p>If you would like to help us extend our platforms and SDKs stack, you are more than welcome to <a href="/contact">contact us</a> or check out our Appwrite <a href="https://github.com/appwrite/sdk-generator" target="_blank" rel="noopener">SDK Generator</a> project GitHub repository and read our <a href="https://github.com/appwrite/sdk-generator/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">contribution guide</a>.</p>
 
-<h2>Integrate without an SDK</h2>
+<h2><a href="#noSDK" id="noSDK">Integrate without an SDK</a></h2>
 
 <p>We are always looking to add new SDKs to our platform, but if the SDK you are looking for is still missing or in a beta channel, you can always integrate with Appwrite directly using any standard HTTP client and the Appwrite REST API. You can learn more about <a href="https://dev.to/eldadfux/learn-how-you-can-take-advantage-of-the-appwrite-api-without-using-any-sdk-a41" rel="noopener" target="_blank">how you can integrate directly with Appwrite HTTP API</a> from our dedicated blog post on the topic.</p>
 
-<h2>Community</h2>
+<h2><a href="#community" id="community">Community</a></h2>
 
 <p>If you have created your own framework or any other technology specific integration and would like us to list it here please <a href="/contact">contact us</a>.</p>
