--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -96,8 +96,8 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 
 <p>Initialize your SDK code with your project ID, which can be found in your project settings page.</p>
 
-<div class="ide" data-lang="dart" data-lang-label="Dart SDK">
-    <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
+<div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
+  <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
 Client client = Client();
 
@@ -117,8 +117,8 @@ client
 
 <p>Once your SDK object is set, access any of the Appwrite services and choose any request to send. Full documentation for any service method you would like to use can be found in your SDK documentation or in the API References section.</p>
 
-<div class="ide" data-lang="dart" data-lang-label="Dart SDK">
-                    <pre class="line-numbers"><code class="prism language-dart" data-prism>// Register User
+<div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
+  <pre class="line-numbers"><code class="prism language-dart" data-prism>// Register User
 Account account = Account(client);
 
 Response user = await account
@@ -131,8 +131,8 @@ Response user = await account
 </div>
 
 <h2>Full Example</h2>
-<div class="ide" data-lang="dart" data-lang-label="Dart SDK">
-                    <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
+<div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
+  <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
 Client client = Client();
 
