--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -54,8 +54,7 @@ $androidVersion = (isset($versions['android'])) ? $versions['android'] : '';
         <category android:name="android.intent.category.BROWSABLE" />
         <data android:scheme="appwrite-callback-[PROJECT_ID]"  />
     </intent-filter>
-</activity>
-'); ?></code></pre>
+</activity>'); ?></code></pre>
 </div>
 
 <h2>Init your SDK</h2>
