update flutter getting started docs with new platform support

--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -25,7 +25,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 
 <p>To init your SDK and start interacting with Appwrite services, you need to add a new Flutter platform to your project. To add a new platform, go to your Appwrite console, choose the project you created in the step before, and click the 'Add Platform' button.</p>
 
-<p>From the options, choose to add a new <b>Flutter</b> platform and add your app credentials. Appwrite Flutter SDK currently supports building apps for both iOS and Android.</p>
+<p>From the options, choose to add a new <b>Flutter</b> platform and add your app credentials. Appwrite Flutter SDK currently supports building apps for Android, iOS, Linux, Mac OS, Web and Windows.</p>
 
 <p>If you are building your Flutter application for multiple devices, you have to follow this process for each different device.</p>
 
@@ -34,6 +34,15 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 
 <h3>Android</h3>
 <p>For <b>Android</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the applicationId in your app-level build.gradle file. By registering your new app platform, you are allowing your app to communicate with the Appwrite API.</p>
+
+<h3>Linux</h3>
+<p>For <b?>Linux</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your pubspec.yaml file. If you cannot find the correct package name, run the application in linux, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
+
+<h3>Windows</h3>
+<p>For <b>Windows</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your pubspec.yaml file. If you cannot find the correct package name, run the application in windows, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
+
+<h3>Mac OS</h3>
+<p>For <b>Mac OS</b> add your app name and Bundle ID, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
 
 <h2><a href="#getSDK" id="getSDK">Get Appwrite Flutter SDK</a></h2>
 
