--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -29,49 +29,9 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 
 <p>If you are building your Flutter application for multiple devices, you have to follow this process for each different device.</p>
 
-<h3>iOS</h3>
-<p>For <b>iOS</b> add your app <u>name</u> and <u>Bundle ID</u>, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
-
 <h3>Android</h3>
-<p>For <b>Android</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the applicationId in your app-level build.gradle file. By registering your new app platform, you are allowing your app to communicate with the Appwrite API.</p>
 
-<h3>Linux</h3>
-<p>For <b?>Linux</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your pubspec.yaml file. If you cannot find the correct package name, run the application in linux, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
-
-<h3>Windows</h3>
-<p>For <b>Windows</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your pubspec.yaml file. If you cannot find the correct package name, run the application in windows, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
-
-<h3>Mac OS</h3>
-<p>For <b>Mac OS</b> add your app name and Bundle ID, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
-
-<h2><a href="#getSDK" id="getSDK">Get Appwrite Flutter SDK</a></h2>
-
-<p>Add <a href="https://pub.dev/packages/appwrite" target="_blank" rel="noopener">Appwrite SDK</a> to your package's pubspec.yaml file <a href="https://github.com/appwrite/playground-for-flutter/blob/master/pubspec.yaml" target="_blank" rel="noopener">(view example)</a>:</p>
-
-<div class="ide margin-bottom" data-lang="yaml" data-lang-label="yaml">
-    <pre class="line-numbers"><code class="prism language-yaml" data-prism>dependencies:
-  appwrite: ^<?php echo $this->escape($version); ?>
-</code></pre>
-</div>
-
-<p>You can also install the SDK using the <a href="https://pub.dev/" target="_blank" rel="noopener">Dart package manager</a> from your terminal:</p>
-
-<div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-  <pre class="line-numbers"><code class="prism language-bash" data-prism>pub get appwrite</code></pre>
-</div>
-
-<h3>iOS</h3>
-
-<p>The Appwrite SDK uses ASWebAuthenticationSession on iOS 12+ and SFAuthenticationSession on iOS 11 to allow OAuth authentication. You have to change your iOS Deployment Target in Xcode to be iOS >= 11 to be able to build your app on an emulator or a real device.</p>
-
-<ol class="margin-top margin-bottom-large">
-  <li class="margin-bottom-small">In Xcode, open Runner.xcworkspace in your app's ios folder.
-  <li class="margin-bottom-small">To view your app's settings, select the Runner project in the Xcode project navigator. Then, in the main view sidebar, select the Runner target.</li>
-  <li class="margin-bottom-small">Select the General tab.</li>
-  <li class="margin-bottom-small">In Deployment Info, 'Target' select iOS 11.0</li>
-</ol>
-
-<h3>Android</h3>
+<p>For <b>Android</b> first add your app <u>name</u> and <u>package name</u>, Your package name is generally the applicationId in your app-level build.gradle file. By registering your new app platform, you are allowing your app to communicate with the Appwrite API.</p>
 
 <p>In order to capture the Appwrite OAuth callback url, the following activity needs to be added to your <a href="https://github.com/appwrite/playground-for-flutter/blob/master/android/app/src/main/AndroidManifest.xml" target="_blank" rel="noopener">AndroidManifest.xml</a>. Be sure to relpace the <b>[PROJECT_ID]</b> string with your actual Appwrite project ID. You can find your Appwrite project ID in you project settings screen in your Appwrite console.</p>
 
@@ -92,6 +52,27 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 </code></pre>
 </div>
 
+<h3>iOS</h3>
+
+<p>For <b>iOS</b> first add your app <u>name</u> and <u>Bundle ID</u>, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
+
+<p>The Appwrite SDK uses ASWebAuthenticationSession on iOS 12+ and SFAuthenticationSession on iOS 11 to allow OAuth authentication. You have to change your iOS Deployment Target in Xcode to be iOS >= 11 to be able to build your app on an emulator or a real device.</p>
+
+<ol class="margin-top margin-bottom-large">
+  <li class="margin-bottom-small">In Xcode, open Runner.xcworkspace in your app's ios folder.
+  <li class="margin-bottom-small">To view your app's settings, select the Runner project in the Xcode project navigator. Then, in the main view sidebar, select the Runner target.</li>
+  <li class="margin-bottom-small">Select the General tab.</li>
+  <li class="margin-bottom-small">In Deployment Info, 'Target' select iOS 11.0</li>
+</ol>
+
+<h3>Linux</h3>
+
+<p>For <b?>Linux</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your pubspec.yaml file. If you cannot find the correct package name, run the application in linux, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
+
+<h3>Mac OS</h3>
+
+<p>For <b>Mac OS</b> add your app name and Bundle ID, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
+
 <h3>Web</h3>
 
 <p>Appwrite 0.7, and the Appwrite Flutter SDK 0.3.0 have added support for Flutter Web. To build web apps that integrate with Appwrite successfully, all you have to do is add a web platform on your Appwrite project's dashboard and list the domain your website will use to allow communication to the Appwrite API.</p>
@@ -99,6 +80,28 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 <div class="notice">
   <h2>Flutter Web Cross-Domain Communication & Cookies</h2>
   <p>While running Flutter Web, make sure your Appwrite server and your Flutter client are using the same top-level domain and the same protocol (HTTP or HTTPS) to communicate. When trying to communicate between different domains or protocols, you may receive HTTP status error 401 because some modern browsers block cross-site or insecure cookies for enhanced privacy. In production, Appwrite allows you set multiple <a href="/docs/custom-domains">custom-domains</a> for each project.</p>
+</div>
+
+
+<h3>Windows</h3>
+
+<p>For <b>Windows</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your pubspec.yaml file. If you cannot find the correct package name, run the application in windows, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
+
+
+<h2><a href="#getSDK" id="getSDK">Get Appwrite Flutter SDK</a></h2>
+
+<p>Add <a href="https://pub.dev/packages/appwrite" target="_blank" rel="noopener">Appwrite SDK</a> to your package's pubspec.yaml file <a href="https://github.com/appwrite/playground-for-flutter/blob/master/pubspec.yaml" target="_blank" rel="noopener">(view example)</a>:</p>
+
+<div class="ide margin-bottom" data-lang="yaml" data-lang-label="yaml">
+    <pre class="line-numbers"><code class="prism language-yaml" data-prism>dependencies:
+  appwrite: ^<?php echo $this->escape($version); ?>
+</code></pre>
+</div>
+
+<p>You can also install the SDK using the <a href="https://pub.dev/" target="_blank" rel="noopener">Dart package manager</a> from your terminal:</p>
+
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
+  <pre class="line-numbers"><code class="prism language-bash" data-prism>pub get appwrite</code></pre>
 </div>
 
 <h2><a href="#initSDK" id="initSDK">Init your SDK</a></h2>
