--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -93,13 +93,15 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                 }
                 ?>
 
-                .language-<?php echo strtolower($language['key']); ?> .example-in-<?php echo strtolower($language['key']); ?> {
-                    display: block;
-                }
+                <?php foreach($docDirectories as $docDirectoryKey => $docDirectory): ?>
+                    .language-<?php echo strtolower($language['key']); ?> .example-in-<?php echo strtolower($language['key']); ?>-<?php echo strtolower($docDirectoryKey); ?> {
+                        display: block;
+                    }
 
-                .example-in-<?php echo strtolower($language['key']); ?> {
-                    display: none;
-                }
+                    .example-in-<?php echo strtolower($language['key']); ?>-<?php echo strtolower($docDirectoryKey); ?> {
+                        display: none;
+                    }
+                <?php endforeach; ?>
             <?php endforeach; ?>
         <?php endforeach; ?>
     </style>
@@ -153,7 +155,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                                 $beta = (isset($language['beta'])) ? $language['beta'] : false;
                                 $docDirectories = (isset($language['docDirectories']))
                                     ? $language['docDirectories']
-                                    : ['Lang' => APP_VENDOR_CE.'/docs/examples/'.$versionDocs.'/'.$language['family'].'-'.$language['key'].'/examples/'.$snippet];
+                                    : ['Lang' => 'examples'];
                                 ?>
                                 <?php foreach ($docDirectories as $docDirectoryKey => $docDirectory): ?>
                                 <option value="/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>?sdk=<?php echo $this->escape($key); ?>"<?php echo ($key === $sdk) ? ' selected' : ''; ?>>
@@ -163,7 +165,6 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                             <?php endforeach; ?>
                         <?php endforeach; ?>
                     </select>
-                    &nbsp; code examples.
                 </form>
             </div>
             <div class="col span-4 clear">
@@ -462,19 +463,25 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                                 if(!isset($language['family']) || $language['family'] !== $family) {
                                     continue;
                                 }
-                                
-                                $example = APP_VENDOR_CE.'/docs/examples/'.$versionDocs.'/'.$language['family'].'-'.$language['key'].'/examples/'.$snippet;
 
+                                $docDirectories = (isset($language['docDirectories']))
+                                    ? $language['docDirectories']
+                                    : ['Lang' => 'examples'];
+                                
                                 if(!is_readable($example)) {
                                     //echo "<p class=\"text-danger\"><b>Failed to read code example for {$language['name']}</b>: ({$example})</p>";
                                     continue;
                                 }
                             ?>
-                                <li class="example-in-<?php echo $language['key']; ?>">
-                                    <div class="ide" data-lang="<?php echo $language['key']; ?>" data-lang-label="<?php echo $language['name']; ?> SDK">
-                                        <pre class="line-numbers"><code class="prism language-<?php echo $language['prism']; ?>" data-prism><?php echo $this->escape(file_get_contents($example)); ?></code></pre>
-                                    </div>
-                                </li>
+                                <?php foreach($docDirectories as $docDirectoryKey => $docDirectory):
+                                    $example = APP_VENDOR_CE.'/docs/'.$docDirectory.'/'.$versionDocs.'/'.$language['family'].'-'.$language['key'].'/examples/'.$snippet;
+                                    ?>
+                                    <li class="example-in-<?php echo $language['key']; ?>-<?php echo strtolower($docDirectoryKey); ?>">
+                                        <div class="ide" data-lang="<?php echo $language['key']; ?>" data-lang-label="<?php echo $language['name']; ?> SDK">
+                                            <pre class="line-numbers"><code class="prism language-<?php echo $language['prism']; ?>" data-prism><?php echo $this->escape(file_get_contents($example)); ?></code></pre>
+                                        </div>
+                                    </li>
+                                <?php endforeach; ?>
                             <?php endforeach; ?>
                         <?php endforeach; ?>
                     </ul>
