--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -94,7 +94,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
 
                 $docDirectories = (isset($language['docDirectories']))
                     ? $language['docDirectories']
-                    : ['Lang' => 'examples'];
+                    : ['Default' => 'examples'];
                 ?>
 
                 <?php foreach($docDirectories as $docDirectoryKey => $docDirectory): ?>
@@ -159,10 +159,10 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                                 $beta = (isset($language['beta'])) ? $language['beta'] : false;
                                 $docDirectories = (isset($language['docDirectories']))
                                     ? $language['docDirectories']
-                                    : ['Lang' => 'examples'];
+                                    : ['Default' => 'examples'];
                                 ?>
                                 <?php foreach ($docDirectories as $docDirectoryKey => $docDirectory): ?>
-                                <option value="/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>?sdk=<?php echo $this->escape($key); ?>"<?php echo ($key === $sdk) ? ' selected' : ''; ?>>
+                                <option value="/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>?sdk=<?php echo $this->escape($key); ?>-<?php echo $this->escape(strtolower($docDirectoryKey)); ?>"<?php echo (($key . '-' . $docDirectoryKey) === $sdk) ? ' selected' : ''; ?>>
                                     <?php echo $this->escape($name); ?> SDK <?php if(count($docDirectories) > 1): ?>(<?php echo $docDirectoryKey; ?> examples)<?php endif; ?>
                                 </option>
                                 <?php endforeach; ?>
@@ -470,7 +470,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
 
                                 $docDirectories = (isset($language['docDirectories']))
                                     ? $language['docDirectories']
-                                    : ['Lang' => 'examples'];
+                                    : ['Default' => 'examples'];
    
                             ?>
                                 <?php foreach($docDirectories as $docDirectoryKey => $docDirectory):
