--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -474,7 +474,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
    
                             ?>
                                 <?php foreach($docDirectories as $docDirectoryKey => $docDirectory):
-                                    $example = APP_VENDOR_CE.'/docs/'.$docDirectory.'/'.$versionDocs.'/'.$language['family'].'-'.$language['key'].'/examples/'.$snippet;
+                                    $example = APP_VENDOR_CE.'/docs/examples/'.$versionDocs.'/'.$language['family'].'-'.$language['key'].'/'.$docDirectory.'/'.$snippet;
 
                                     if(!is_readable($example)) {
                                         echo "<p class=\"text-danger\"><b>Failed to read code example for {$language['name']}</b>: ({$example})</p>";
